--- a/presentation_slides copy 2.html
+++ b/presentation_slides copy 2.html
@@ -945,80 +945,32 @@
             </div>
         </div>
         <div class="slide-container slide-wrapper">
-            <div class="slide w-full h-full bg-white p-12 flex flex-col">
-                <h1 class="nanum-square-like text-4xl text-brand-dark mb-8 text-center">💡 인터랙티브 콘텐츠 적용 방안</h1>
-                <div class="flex-grow grid grid-cols-3 gap-6 items-center">
-                    <!-- Plan 1: 미생물 전시실 -->
-                    <div class="flex flex-col h-full shadow-lg rounded-xl overflow-hidden">
-                        <div class="bg-brand-bg p-4 text-center border-b border-gray-200">
-                            <span class="text-brand-main font-bold text-sm tracking-widest">PLAN 01</span>
-                            <h3 class="text-xl font-bold text-brand-black mt-1">미생물 전시실</h3>
+            <div class="slide w-full h-full bg-white p-16 flex flex-col">
+                <h1 class="nanum-square-like text-4xl text-brand-dark mb-12 text-center">💡 인터랙티브 콘텐츠 적용 방안</h1>
+                <div class="flex-grow space-y-6">
+                    <div class="grid grid-cols-10 gap-4 p-6 bg-brand-bg rounded-lg items-center">
+                        <div class="col-span-2 font-bold text-xl">미생물전시실</div>
+                        <div class="col-span-3 text-gray-600">XR 체험 (기존)</div>
+                        <div class="col-span-1 text-center text-2xl text-brand-main"><i class="fas fa-arrow-right"></i>
                         </div>
-                        <div class="flex-grow bg-gray-50 relative overflow-hidden group">
-                            <img src="plan1.png"
-                                class="absolute inset-0 w-full h-full object-contain p-4 transition-transform duration-500 group-hover:scale-105"
-                                alt="Plan 1">
-                        </div>
-                        <div class="bg-white p-6">
-                            <div class="mb-3">
-                                <span class="text-xs font-bold text-gray-500 block mb-1">AS-IS</span>
-                                <p class="text-gray-600 text-sm">XR 체험 (기존)</p>
-                            </div>
-                            <div class="border-t border-gray-100 pt-3">
-                                <span class="text-xs font-bold text-brand-main block mb-1">TO-BE</span>
-                                <p class="font-bold text-brand-dark">AR 미생물 관찰 앱 고도화</p>
-                                <p class="text-xs text-gray-500 mt-1">이용률 60% 목표</p>
-                            </div>
-                        </div>
+                        <div class="col-span-4 font-bold text-brand-dark">AR 미생물 관찰 앱 고도화<br><span
+                                class="text-sm font-normal text-gray-500">이용률 60% 목표</span></div>
                     </div>
-
-                    <!-- Plan 2: 1,2 전시실 -->
-                    <div
-                        class="flex flex-col h-full shadow-lg rounded-xl overflow-hidden transform scale-105 z-10 border-2 border-brand-main">
-                        <div class="bg-brand-main p-4 text-center text-white">
-                            <span class="font-bold text-sm tracking-widest opacity-80">PLAN 02</span>
-                            <h3 class="text-xl font-bold mt-1">제1, 2 전시실</h3>
+                    <div class="grid grid-cols-10 gap-4 p-6 bg-brand-bg rounded-lg items-center">
+                        <div class="col-span-2 font-bold text-xl">1·2전시실</div>
+                        <div class="col-span-3 text-gray-600">표본 중심 전시</div>
+                        <div class="col-span-1 text-center text-2xl text-brand-main"><i class="fas fa-arrow-right"></i>
                         </div>
-                        <div class="flex-grow bg-white relative overflow-hidden group">
-                            <img src="plan2.png"
-                                class="absolute inset-0 w-full h-full object-contain p-4 transition-transform duration-500 group-hover:scale-105"
-                                alt="Plan 2">
-                        </div>
-                        <div class="bg-white p-6">
-                            <div class="mb-3">
-                                <span class="text-xs font-bold text-gray-500 block mb-1">AS-IS</span>
-                                <p class="text-gray-600 text-sm">표본 중심 전시</p>
-                            </div>
-                            <div class="border-t border-gray-100 pt-3">
-                                <span class="text-xs font-bold text-brand-main block mb-1">TO-BE</span>
-                                <p class="font-bold text-brand-dark">동물 움직임 센서 인터랙션</p>
-                                <p class="text-xs text-gray-500 mt-1">바닥/벽면 프로젝션 맵핑</p>
-                            </div>
-                        </div>
+                        <div class="col-span-4 font-bold text-brand-dark">동물 움직임 센서 인터랙션<br><span
+                                class="text-sm font-normal text-gray-500">바닥/벽면 프로젝션 맵핑</span></div>
                     </div>
-
-                    <!-- Plan 3: 4D 상영관 -->
-                    <div class="flex flex-col h-full shadow-lg rounded-xl overflow-hidden">
-                        <div class="bg-brand-bg p-4 text-center border-b border-gray-200">
-                            <span class="text-brand-main font-bold text-sm tracking-widest">PLAN 03</span>
-                            <h3 class="text-xl font-bold text-brand-black mt-1">4D 상영관</h3>
+                    <div class="grid grid-cols-10 gap-4 p-6 bg-brand-bg rounded-lg items-center">
+                        <div class="col-span-2 font-bold text-xl">4D 상영관</div>
+                        <div class="col-span-3 text-gray-600">콘텐츠 부족</div>
+                        <div class="col-span-1 text-center text-2xl text-brand-main"><i class="fas fa-arrow-right"></i>
                         </div>
-                        <div class="flex-grow bg-gray-50 relative overflow-hidden group">
-                            <img src="plan3.png"
-                                class="absolute inset-0 w-full h-full object-contain p-4 transition-transform duration-500 group-hover:scale-105"
-                                alt="Plan 3">
-                        </div>
-                        <div class="bg-white p-6">
-                            <div class="mb-3">
-                                <span class="text-xs font-bold text-gray-500 block mb-1">AS-IS</span>
-                                <p class="text-gray-600 text-sm">콘텐츠 부족</p>
-                            </div>
-                            <div class="border-t border-gray-100 pt-3">
-                                <span class="text-xs font-bold text-brand-main block mb-1">TO-BE</span>
-                                <p class="font-bold text-brand-dark">6K LED 영상 콘텐츠 다양화</p>
-                                <p class="text-xs text-brand-main mt-1">2024.11 개선 완료 적극 활용</p>
-                            </div>
-                        </div>
+                        <div class="col-span-4 font-bold text-brand-dark">6K LED 영상 콘텐츠 다양화<br><span
+                                class="text-sm font-normal text-brand-main">2024.11 개선 완료 적극 활용</span></div>
                     </div>
                 </div>
             </div>
@@ -1325,8 +1277,8 @@
                             <tr class="border-b border-gray-200">
                                 <td class="p-4 font-bold text-brand-black">SNS 방문 경로</td>
                                 <td class="p-4 text-gray-500">18.4%</td>
-                                <td class="p-4 font-bold">35%</td>
-                                <td class="p-4 text-brand-accent font-bold">▲ 90%</td>
+                                <td class="p-4 font-bold">30%</td>
+                                <td class="p-4 text-brand-accent font-bold">▲ 65%</td>
                             </tr>
                             <tr class="border-b border-gray-200 bg-brand-bg">
                                 <td class="p-4 font-bold text-brand-black">관람객 수</td>
