--- a/presentation_slides.html
+++ b/presentation_slides.html
@@ -947,7 +947,7 @@
         <div class="slide-container slide-wrapper">
             <div class="slide w-full h-full bg-white p-12 flex flex-col">
                 <h1 class="nanum-square-like text-4xl text-brand-dark mb-8 text-center">💡 인터랙티브 콘텐츠 적용 방안</h1>
-                <div class="flex-grow grid grid-cols-3 gap-6 items-center">
+                <div class="flex-grow grid grid-cols-3 gap-6">
                     <!-- Plan 1: 미생물 전시실 -->
                     <div class="flex flex-col h-full shadow-lg rounded-xl overflow-hidden">
                         <div class="bg-brand-bg p-4 text-center border-b border-gray-200">
@@ -1005,7 +1005,7 @@
                         </div>
                         <div class="flex-grow bg-gray-50 relative overflow-hidden group">
                             <video src="fuckin_bird.mp4" autoplay muted loop playsinline
-                                class="absolute inset-0 w-full h-full object-cover" poster="plan3.png"></video>
+                                class="absolute inset-0 w-full h-full object-contain p-4" poster="plan3.png"></video>
                         </div>
                         <div class="bg-white p-6">
                             <div class="mb-3">
@@ -1014,8 +1014,8 @@
                             </div>
                             <div class="border-t border-gray-100 pt-3">
                                 <span class="text-xs font-bold text-brand-main block mb-1">TO-BE</span>
-                                <p class="font-bold text-brand-dark">움직이는 마스코트 도입</p>
-                                <p class="text-xs text-gray-500 mt-1">전시관에 생명력을 부여하여 능동적 체험 제공</p>
+                                <p class="font-bold text-brand-dark">디즈니 '올라프'와 같은 움직이는 마스코트 도입</p>
+                                <p class="text-xs text-brand-main mt-1">전시관에 생명력을 부여하여 능동적 체험 제공</p>
                             </div>
                         </div>
                     </div>
