--- a/presentation_slides.html
+++ b/presentation_slides.html
@@ -802,7 +802,7 @@
                     </div>
                     <div
                         class="w-1/2 bg-brand-bg rounded-xl p-8 flex flex-col items-center justify-center relative overflow-hidden">
-                        <img src="museum_interior_water_garden_1764253938492.png"
+                        <img src="eyJrZXkiOiJwbGFjZXMvNjUxMjRjZWJkYjNlYTZmNDIyZjIyYjExIiwiZWRpdHMiOnsicmVzaXplIjp7IndpZHRoIjo3NDIsIndpdGhvdXRFbmxhcmdlbWVudCI6dHJ1ZX19fQ==.jpeg"
                             class="absolute inset-0 w-full h-full object-cover opacity-30" alt="Museum Concept">
                         <div class="absolute top-4 left-4 text-brand-gray text-sm z-10">CONCEPT MAP</div>
                         <div
