--- a/presentation_slides.html
+++ b/presentation_slides.html
@@ -1099,12 +1099,12 @@
                         Top 1
                     </div>
                     <div class="bg-white rounded-xl shadow-lg overflow-hidden">
-                        <div class="h-40 bg-gray-200 flex items-center justify-center text-gray-400 overflow-hidden">
-                            <img src="충주맨.png" class="w-full h-full object-cover" alt="Youtube Thumbnail">
+                        <div class="h-80 bg-gray-200 flex items-center justify-center overflow-hidden">
+                            <iframe src="https://www.youtube.com/embed/KaephfcQyHU" class="w-full h-full" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                         </div>
                         <div class="p-4">
-                            <div class="h-4 w-3/4 bg-gray-200 rounded mb-2">충주시 "see you again"</div>
-                            <div class="h-4 w-1/2 bg-gray-200 rounded">충청내륙고속도로 홍보영상</div>
+                            <div class="text-sm text-gray-700 font-bold mb-1">충주시 유튜브 쇼츠</div>
+                            <div class="text-xs text-gray-500">95만 구독자 공식 채널</div>
                         </div>
                     </div>
                     <p class="text-center mt-6 font-bold text-brand-dark">"딱딱한 공공기관 이미지를 탈피한 혁신"</p>
